--- a/WM.Bar/App.xaml
+++ b/WM.Bar/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="WM.Bar.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WM.Bar"
-             StartupUri="MainWindow.xaml">
+             Startup="App_OnStartup"
+             Exit="App_OnExit"
+             >
     <Application.Resources>
     </Application.Resources>
 </Application>
