--- a/WM.UI/App.xaml
+++ b/WM.UI/App.xaml
@@ -1,6 +1,8 @@
 ﻿<Application x:Class="WM.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:ui="clr-namespace:WM.UI">
     <Application.Resources>
+        <ui:ViewModelLocator x:Key="ViewModelLocator" />
     </Application.Resources>
 </Application>
