--- a/WM.UI/Views/Bar.xaml
+++ b/WM.UI/Views/Bar.xaml
@@ -3,7 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModels="clr-namespace:WM.UI.ViewModels"
         mc:Ignorable="d"
+        d:DataContext="{viewModels:BarViewModel}"
         Title="riceWm" >
     <Grid>
         <StackPanel x:Name="WorkSpacesStackPanel" HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal" Height="Auto" Width="Auto">
